# cdnow-customer-value

./: README.md  pyproject.toml  requirements.txt  setup_env.sh
src/: customer_ltv.py
src/artifacts/: cat_class_importance_df.pkl  cat_class_y_pred_proba.pkl  cat_reg_importance_df.pkl  cat_reg_predictions.pkl  cat_reg_y_pred.pkl  combined_class_y_pred_df_final.pkl  combined_class_y_pred_final.pkl  combined_model_predictions_final.pkl  combined_reg_predictions_final.pkl  customer_ltv.ipynb  features_df.pkl  features_with_predictions_final.pkl  predictions_df.pkl  tuned_class_y_pred_df_final.pkl  tuned_class_y_pred_final.pkl  xgb_reg_predictions.pkl  xgb_reg_predictions_bayes_tuned.pkl  xgb_reg_predictions_random_tuned.pkl
src/documents/: REPORT.md  report.docx
src/models/: best_cat_class_model_final.pkl  best_cat_reg_model.pkl  best_xgb_class_model_final.pkl  best_xgb_reg_model.pkl  best_xgb_reg_model_bayes_tuned.pkl  best_xgb_reg_model_random_tuned.pkl  cat_class_best_model.pkl  cat_class_model_tuning.pkl  cat_reg_best_model.pkl  catboost_classifier.pkl  catboost_regressor.pkl  stacking_model.pkl  stacking_model_tuned.pkl
src/notebooks/: customer_ltv.docx  customer_ltv.html  customer_ltv.ipynb
src/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/notebooks/catboost_info/learn/: events.out.tfevents
src/notebooks/final_catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/notebooks/final_catboost_info/learn/: events.out.tfevents
