[project]
name = "cdnow-customer-value"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "ipykernel>=6.29.4",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
    "statsmodels>=0.14.2",
    "xgboost>=2.0.3",
    "catboost>=1.2.5",
    "scikit-learn>=1.5.0",
    "plotnine>=0.13.6",
    "plydata>=0.4.3",
    "cupy-cuda12x>=13.1.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
