[project]
name = "cdnow-customer-value"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "ipykernel>=6.29.4",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "plotnine>=0.13.6",
    "xgboost>=2.0.3",
    "catboost>=1.2.5",
    "seaborn>=0.13.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
